--- a/BmsWpf/Views/ChildWindows/MainCalendarEvents.xaml
+++ b/BmsWpf/Views/ChildWindows/MainCalendarEvents.xaml
@@ -3,30 +3,48 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BmsWpf.Views.ChildWindows"
+        xmlns:intr="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+        xmlns:viewModels="clr-namespace:BmsWpf.ViewModels"
         mc:Ignorable="d"
         Title="MainCalendarEvents" Height="600" Width="750" Background="#2e3137">
+    <Window.DataContext>
+        <viewModels:MainCalendarEventsViewModel/>
+    </Window.DataContext>
+    <intr:Interaction.Triggers>
+        <intr:EventTrigger EventName="Loaded">
+            <intr:InvokeCommandAction Command="{Binding WindowLoaded}"/>
+        </intr:EventTrigger>
+    </intr:Interaction.Triggers>
     <Grid>
-        <Calendar VerticalAlignment="Top" HorizontalAlignment="Left" Margin="28,48,0,0" Height="166" Width="180"></Calendar>
-        <Button Name ="BackButton" Click="Back_OnClickButton_Click" Content="Back" Background="AliceBlue" Height="50" Width="180" Margin="501,481,63,39.4"/>
-        <Button Name="AddEventButton" Content="Add new event" Click="addEventButton_Click" Background="AliceBlue" Height="50" Width="180" Margin="28,265,536,255.4"/>
-        <Button Name="EditEventButton" Content="Edit event" Click="EditEventButton_OnClickEventButton_Click" Background="AliceBlue" Height="50" Width="180" Margin="28,322,536,198.4" RenderTransformOrigin="0.503,0.266"/>
-        <Button Name="DeleteEventButton" Content="Delete event" Click="DeleteEventButton_OnClickEventButton_Click" Background="AliceBlue" Height="50" Width="180" Margin="28,381,536,139.4"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="91*"/>
+            <ColumnDefinition Width="281*"/>
+        </Grid.ColumnDefinitions>
+        <Calendar VerticalAlignment="Top" HorizontalAlignment="Left" Margin="28,48,0,0" Height="166" Width="180" Grid.ColumnSpan="2"></Calendar>
+        <Button Name ="BackButton" Command="{Binding Back}"  Content="Back" Background="AliceBlue" Height="50" Width="180" Margin="318.566,481,63,39.4" Grid.Column="1"/>
+        <Button Name="AddEventButton" Content="Add new event" Command="{Binding AddNew}" Background="AliceBlue" Height="50" Width="180" Margin="28,265,536,255.4" Grid.ColumnSpan="2"/>
+        <Button Name="EditEventButton" Content="Edit event" Command="{Binding Edit}" Background="AliceBlue" Height="50" Width="180" Margin="28,322,536,198.4" RenderTransformOrigin="0.503,0.266" Grid.ColumnSpan="2"/>
+        <Button Name="DeleteEventButton" Content="Delete event" Command="{Binding Delete}" Background="AliceBlue" Height="50" Width="180" Margin="28,381,536,139.4" Grid.ColumnSpan="2"/>
 
-        <ScrollViewer Background="AntiqueWhite" HorizontalAlignment="Right" Height="383" Margin="0,48,63,0" VerticalAlignment="Top" Width="428" VerticalScrollBarVisibility="Auto">
-            <ListView Name="eventView" SelectionChanged="eventView_SelectionChanged">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="Title" Width="30" DisplayMemberBinding="{Binding Title}"></GridViewColumn>
-                        <GridViewColumn Header="Description" Width="250" DisplayMemberBinding="{Binding Description}"></GridViewColumn>
-                        <GridViewColumn Header="Start Time" Width="70" DisplayMemberBinding="{Binding StartTime}"></GridViewColumn>
-                        <GridViewColumn Header="End Time" Width="70" DisplayMemberBinding="{Binding EndTime}"></GridViewColumn>
-                    </GridView>
-                </ListView.View>
-            </ListView>
-        </ScrollViewer>
-        <Label Name="timeView" HorizontalAlignment="Left" Margin="377,14,0,0" VerticalAlignment="Top" FontSize="16" Width="304" Foreground="White" Height="29"/>
-        <Label Content="Events for:" Foreground="White" FontSize="18" HorizontalAlignment="Left" Margin="253,14,0,0" VerticalAlignment="Top" Width="100"/>
+        <DataGrid Name="EventsDataGrid" 
+                  Background="AntiqueWhite" 
+                  HorizontalAlignment="Right" Height="383" 
+                  Margin="0,48,63,0" VerticalAlignment="Top" 
+                  Width="428" VerticalScrollBarVisibility="Auto" 
+                  Grid.Column="1"
+                  SelectionMode="Single"
+                  CanUserAddRows="false"
+                  ItemsSource="{Binding CalendarEvents}"
+                  SelectedItem="{Binding SelectedCalendarEvents}">
+            <intr:Interaction.Triggers>
+                <intr:EventTrigger EventName="MouseDoubleClick">
+                    <intr:InvokeCommandAction Command="{Binding DoubleClick}" />
+                </intr:EventTrigger>
+            </intr:Interaction.Triggers>
+        </DataGrid>
+      
+        <Label Name="timeView" HorizontalAlignment="Left" Margin="194.566,14,0,0" VerticalAlignment="Top" FontSize="16" Width="304" Foreground="White" Height="29" Grid.Column="1"/>
+        <Label Content="Events for:" Foreground="White" FontSize="18" HorizontalAlignment="Left" Margin="70.566,14,0,0" VerticalAlignment="Top" Width="100" Grid.Column="1"/>
     </Grid>
 
 </Window>
